tests/paczka1/fuzzy1/86988732.err
Error in line 2: IpB5GPXLlq A57 42,4
Error in line 4: oO5 S444 85,2
Error in line 6: IpB5GPXLlq A381 32,6
Error in line 32: rwFUd7 S444 2,9
Error in line 36: Y3LxijQ A57 67,1
